/*
 * $Id: ChangeLog,v 1.1862 2003/12/13 05:49:49 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-12-13 14:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * ChangeLog
    * Rename ChangeLog to ChangeLog.017
    * Add new ChangeLog
  * source/vm/hvm.c
    * minor changes to fix representation of -0 value (I hope this is the last part)
